--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -6,6 +6,14 @@
     <td><p>住所: <%= property.address %></td>
     <td><p>築年数: <%= property.age %></td>
     <td><p>備考: <%= property.remarks %></td>
-    <td><%= link_to '詳細を確認する', property_path(property.id) %></td>
   </tr>
 <% end %>
+<% @station.each do |station| %>
+  <tr>
+    <td><p>路線名: <%= station.line %></p></td>
+    <td><p>駅名: <%= station.nearest_station %></td>
+    <td><p>徒歩分数: <%= station.on_foot %></td>
+  </tr>
+<% end %>
+<%= link_to '編集', property_path(property.id) %>
+<%= link_to '戻る', properties_path %>
