--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -1,4 +1,3 @@
-<%=# render 'form', property: @property, station: @station %>
 <h1>物件登録</h1>
 <%= form_with(model: @property, local: true) do |form| %>
   <div class="property_name">
@@ -21,34 +20,34 @@
     <%= form.label :remarks %>
     <%= form.text_field :remarks %>
   </div>
-<% end %>
-<%= form_with(model: @station, local: true) do |form| %>
-  <strong>最寄り駅1</strong>
-  <div class="station_line">
-    <%= form.label :line %>
-    <%= form.text_field :line %>
-  </div>
-  <div class="station_nearest_station">
-    <%= form.label :nearest_station %>
-    <%= form.text_field :nearest_station %>
-  </div>
-  <div class="station_on_foot">
-    <%= form.label :on_foot %>
-    <%= form.text_field :on_foot %>
-  </div>
-  <strong>最寄り駅2</strong>
-  <div class="station_line">
-    <%= form.label :line %>
-    <%= form.text_field :line %>
-  </div>
-  <div class="station_nearest_station">
-    <%= form.label :nearest_station %>
-    <%= form.text_field :nearest_station %>
-  </div>
-  <div class="station_on_foot">
-    <%= form.label :on_foot %>
-    <%= form.text_field :on_foot %>
-  </div>
-  <%= form.submit %>
+  <%= form.fields_for :stations do |s| %>
+    <strong>最寄り駅1</strong>
+    <div class="station_line">
+      <%= s.label :line %>
+      <%= s.text_field :line %>
+    </div>
+    <div class="station_nearest_station">
+      <%= s.label :nearest_station %>
+      <%= s.text_field :nearest_station %>
+    </div>
+    <div class="station_on_foot">
+      <%= s.label :on_foot %>
+      <%= s.text_field :on_foot %>
+    </div>
+    <strong>最寄り駅2</strong>
+    <div class="station_line">
+      <%= s.label :line %>
+      <%= s.text_field :line %>
+    </div>
+    <div class="station_nearest_station">
+      <%= s.label :nearest_station %>
+      <%= s.text_field :nearest_station %>
+    </div>
+    <div class="station_on_foot">
+      <%= s.label :on_foot %>
+      <%= s.text_field :on_foot %>
+    </div>
+  <% end %>
+    <%= form.submit %>
 <% end %>
 <%= link_to "戻る", properties_path %>
