--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -1,40 +1,40 @@
 <h1>物件登録</h1>
 <%= form_with(model: @property, local: true) do |form| %>
-  <div class="property_name">
+  <div class="name">
     <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
-  <div class="property_rent">
+  <div class="rent">
     <%= form.label :rent %>
     <%= form.text_field :rent %>
   </div>
-  <div class="property_address">
+  <div class="address">
     <%= form.label :address %>
     <%= form.text_field :address %>
   </div>
-  <div class="property_age">
+  <div class="age">
     <%= form.label :age %>
     <%= form.text_field :age %>
   </div>
-  <div class="property_remarks">
+  <div class="remarks">
     <%= form.label :remarks %>
     <%= form.text_field :remarks %>
   </div>
   <%= form.fields_for :stations do |s| %>
-  <strong>最寄り駅1</strong><strong>最寄り駅2</strong>
-    <div class="station_line">
-      <%= s.label :line %>
+    <strong>最寄り駅1</strong><strong>最寄り駅2</strong>
+    <div class="line">
+      <%= s.label :路線名 %>
       <%= s.text_field :line %>
     </div>
-    <div class="station_nearest_station">
-      <%= s.label :nearest_station %>
+    <div class="station">
+      <%= s.label :駅名 %>
       <%= s.text_field :nearest_station %>
     </div>
-    <div class="station_on_foot">
-      <%= s.label :on_foot %>
+    <div class="on_foot">
+      <%= s.label :徒歩分数 %>
       <%= s.text_field :on_foot %>
     </div>
   <% end %>
-    <%= form.submit %>
+  <%= form.submit '登録する' %>
 <% end %>
 <%= link_to "戻る", properties_path %>
