--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,4 +1,5 @@
 <h1>物件一覧</h1>
+<%= notice %>
 <table>
   <tr>
     <th>物件名</th>
@@ -15,7 +16,7 @@
     <td><%= property.age %></td>
     <td><%= property.remarks %></td>
     <td><%= link_to '詳細', property_path(property.id) %></td>
-    <td><%= link_to '編集', property_path(property.id) %></td>
+    <td><%= link_to '編集', edit_property_path(property.id) %></td>
     <td><%= link_to '削除', property_path(property.id), method: :delete %></td>
   </tr>
 <% end %>
