--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -2,18 +2,21 @@
 <% @property.each do |p| %>
   <tr>
     <td><p>物件名: <%= p.name %></p></td>
-    <td><p>賃料: <%= p.rent %></td>
-    <td><p>住所: <%= p.address %></td>
-    <td><p>築年数: <%= p.age %></td>
-    <td><p>備考: <%= p.remarks %></td>
+    <td><p>賃料: <%= p.rent %>円</p></td>
+    <td><p>住所: <%= p.address %></p></td>
+    <td><p>築年数: <%= p.age %>年</p></td>
+    <td><p>備考: <%= p.remarks %></p></td>
   </tr>
 <% end %>
-<% @property.stations.each do |s| %>
-  <tr>
-    <td><p>路線名: <%= s.line %></p></td>
-    <td><p>駅名: <%= s.nearest_station %></td>
-    <td><p>徒歩分数: <%= s.on_foot %></td>
-  </tr>
+<% @stations.each do |s| %>
+  <% if @property.stations.any? %>
+    <tr>
+      <td><p>路線名: <%= s.line %></p></td>
+      <td><p>駅名: <%= s.nearest_station %></p></p></td>
+      <td><p>徒歩分数: <%= s.on_foot %>分</p></td>
+    </tr>
+  <% end %>
 <% end %>
-<%= link_to '編集', property_path(property.id) %>
+</table>
+<%# <%= link_to '編集', property_path(property.id) %> %>
 <%= link_to '戻る', properties_path %>
