newとshow.html.erbに繰り返しの回数(=最寄り駅の数)を取得するコードを記述

--- a/app/assets/stylesheets/properties.scss
+++ b/app/assets/stylesheets/properties.scss
@@ -1,3 +1,15 @@
-// Place all the styles related to the properties controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.name {
+  padding: 0 30px;
+}
+.rent {
+  padding: 0 30px;
+}
+.address {
+  padding: 0 30px;
+}
+.age {
+  padding: 0 30px;
+}
+.remarks {
+  padding: 0 30px;
+}
