--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -2,18 +2,18 @@
 <%= notice %>
 <table>
   <tr>
-    <th>物件名</th>
-    <th>賃料</th>
-    <th>住所</th>
-    <th>築年数</th>
-    <th>備考</th>
+    <th class="name">物件名</th>
+    <th class="rent">賃料</th>
+    <th class="address">住所</th>
+    <th class="age">築年数</th>
+    <th class="remarks">備考</th>
   </tr>
 <% @properties.each do |property| %>
   <tr>
     <td><%= property.name %></td>
-    <td><%= property.rent %></td>
+    <td><%= property.rent %><br>円</td>
     <td><%= property.address %></td>
-    <td><%= property.age %></td>
+    <td><%= property.age %><br>年</td>
     <td><%= property.remarks %></td>
     <td><%= link_to '詳細', property_path(property.id) %></td>
     <td><%= link_to '編集', edit_property_path(property.id) %></td>
