--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -21,7 +21,9 @@
     <%= form.text_field :remarks %>
   </div>
   <%= form.fields_for :stations do |s| %>
-    <strong>最寄り駅1</strong><strong>最寄り駅2</strong>
+    <strong>
+      最寄り駅<%= "#{s.index+1}" %>
+    </strong>
     <div class="line">
       <%= s.label :路線名 %>
       <%= s.text_field :line %>
