--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -1,22 +1,21 @@
 <table>
-<% @property.each do |p| %>
   <tr>
-    <td><p>物件名: <%= p.name %></p></td>
-    <td><p>賃料: <%= p.rent %>円</p></td>
-    <td><p>住所: <%= p.address %></p></td>
-    <td><p>築年数: <%= p.age %>年</p></td>
-    <td><p>備考: <%= p.remarks %></p></td>
+    <td><p>物件名: <%= @property.name %></p></td>
+    <td><p>賃料: <%= @property.rent %><br>円</p></td>
+    <td><p>住所: <%= @property.address %></p></td>
+    <td><p>築年数: <%= @property.age %><br>年</p></td>
+    <td><p>備考: <%= @property.remarks %></p></td>
   </tr>
-<% end %>
-<% @stations.each do |s| %>
+<% @stations.each_with_index do |s, i| %>
   <% if @property.stations.any? %>
     <tr>
+      <td><p>最寄り駅<%= "#{i+1}" %></p></td>
       <td><p>路線名: <%= s.line %></p></td>
-      <td><p>駅名: <%= s.nearest_station %></p></p></td>
+      <td><p>駅名: <%= s.nearest_station %></p></td>
       <td><p>徒歩分数: <%= s.on_foot %>分</p></td>
     </tr>
   <% end %>
 <% end %>
 </table>
-<%# <%= link_to '編集', property_path(property.id) %> %>
+<%= link_to '編集', edit_property_path(@property.id) %>
 <%= link_to '戻る', properties_path %>
